--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,7 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+// Vendors
+//==========================================>
+@import "../bower/font-awesome/scss/font-awesome";
+@import "../bower/material-design-lite/src/material-design-lite";
 
+// Styles
+//==========================================>
