--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 //==========================================>
 @import "../bower/font-awesome/scss/font-awesome";
 @import "../bower/material-design-lite/src/material-design-lite";
+@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap";
 
 html, body {
     font-family: 'Roboto', 'Helvetica', sans-serif;
