--- a/resources/assets/sass/backtend.scss
+++ b/resources/assets/sass/backtend.scss
@@ -194,4 +194,15 @@
         box-sizing: border-box;
         align-items: center;
     }
+    .demo-card-wide.mdl-card {
+        width: 512px;
+    }
+    .demo-card-wide > .mdl-card__title {
+        color: #fff;
+        height: 176px;
+        background: url('../img/welcome_card.jpg') center / cover;
+    }
+    .demo-card-wide > .mdl-card__menu {
+        color: #fff;
+    }
 }
